[gd_scene load_steps=4 format=3 uid="uid://c4kidmrfys0hr"]

[ext_resource type="Script" uid="uid://d2rjwyex7msfg" path="res://main.gd" id="1_ig7tw"]

[sub_resource type="FontFile" id="FontFile_0xm2m"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/17/0/ascent = 0.0
cache/0/17/0/descent = 0.0
cache/0/17/0/underline_position = 0.0
cache/0/17/0/underline_thickness = 0.0
cache/0/17/0/scale = 1.0
cache/0/18/0/ascent = 0.0
cache/0/18/0/descent = 0.0
cache/0/18/0/underline_position = 0.0
cache/0/18/0/underline_thickness = 0.0
cache/0/18/0/scale = 1.0
cache/0/19/0/ascent = 0.0
cache/0/19/0/descent = 0.0
cache/0/19/0/underline_position = 0.0
cache/0/19/0/underline_thickness = 0.0
cache/0/19/0/scale = 1.0
cache/0/20/0/ascent = 0.0
cache/0/20/0/descent = 0.0
cache/0/20/0/underline_position = 0.0
cache/0/20/0/underline_thickness = 0.0
cache/0/20/0/scale = 1.0
cache/0/21/0/ascent = 0.0
cache/0/21/0/descent = 0.0
cache/0/21/0/underline_position = 0.0
cache/0/21/0/underline_thickness = 0.0
cache/0/21/0/scale = 1.0
cache/0/22/0/ascent = 0.0
cache/0/22/0/descent = 0.0
cache/0/22/0/underline_position = 0.0
cache/0/22/0/underline_thickness = 0.0
cache/0/22/0/scale = 1.0
cache/0/23/0/ascent = 0.0
cache/0/23/0/descent = 0.0
cache/0/23/0/underline_position = 0.0
cache/0/23/0/underline_thickness = 0.0
cache/0/23/0/scale = 1.0
cache/0/24/0/ascent = 0.0
cache/0/24/0/descent = 0.0
cache/0/24/0/underline_position = 0.0
cache/0/24/0/underline_thickness = 0.0
cache/0/24/0/scale = 1.0
cache/0/25/0/ascent = 0.0
cache/0/25/0/descent = 0.0
cache/0/25/0/underline_position = 0.0
cache/0/25/0/underline_thickness = 0.0
cache/0/25/0/scale = 1.0
cache/0/26/0/ascent = 0.0
cache/0/26/0/descent = 0.0
cache/0/26/0/underline_position = 0.0
cache/0/26/0/underline_thickness = 0.0
cache/0/26/0/scale = 1.0
cache/0/27/0/ascent = 0.0
cache/0/27/0/descent = 0.0
cache/0/27/0/underline_position = 0.0
cache/0/27/0/underline_thickness = 0.0
cache/0/27/0/scale = 1.0
cache/0/28/0/ascent = 0.0
cache/0/28/0/descent = 0.0
cache/0/28/0/underline_position = 0.0
cache/0/28/0/underline_thickness = 0.0
cache/0/28/0/scale = 1.0
cache/0/29/0/ascent = 0.0
cache/0/29/0/descent = 0.0
cache/0/29/0/underline_position = 0.0
cache/0/29/0/underline_thickness = 0.0
cache/0/29/0/scale = 1.0
cache/0/30/0/ascent = 0.0
cache/0/30/0/descent = 0.0
cache/0/30/0/underline_position = 0.0
cache/0/30/0/underline_thickness = 0.0
cache/0/30/0/scale = 1.0
cache/0/31/0/ascent = 0.0
cache/0/31/0/descent = 0.0
cache/0/31/0/underline_position = 0.0
cache/0/31/0/underline_thickness = 0.0
cache/0/31/0/scale = 1.0
cache/0/32/0/ascent = 0.0
cache/0/32/0/descent = 0.0
cache/0/32/0/underline_position = 0.0
cache/0/32/0/underline_thickness = 0.0
cache/0/32/0/scale = 1.0
cache/0/33/0/ascent = 0.0
cache/0/33/0/descent = 0.0
cache/0/33/0/underline_position = 0.0
cache/0/33/0/underline_thickness = 0.0
cache/0/33/0/scale = 1.0
cache/0/34/0/ascent = 0.0
cache/0/34/0/descent = 0.0
cache/0/34/0/underline_position = 0.0
cache/0/34/0/underline_thickness = 0.0
cache/0/34/0/scale = 1.0
cache/0/35/0/ascent = 0.0
cache/0/35/0/descent = 0.0
cache/0/35/0/underline_position = 0.0
cache/0/35/0/underline_thickness = 0.0
cache/0/35/0/scale = 1.0
cache/0/36/0/ascent = 0.0
cache/0/36/0/descent = 0.0
cache/0/36/0/underline_position = 0.0
cache/0/36/0/underline_thickness = 0.0
cache/0/36/0/scale = 1.0
cache/0/37/0/ascent = 0.0
cache/0/37/0/descent = 0.0
cache/0/37/0/underline_position = 0.0
cache/0/37/0/underline_thickness = 0.0
cache/0/37/0/scale = 1.0
cache/0/38/0/ascent = 0.0
cache/0/38/0/descent = 0.0
cache/0/38/0/underline_position = 0.0
cache/0/38/0/underline_thickness = 0.0
cache/0/38/0/scale = 1.0
cache/0/39/0/ascent = 0.0
cache/0/39/0/descent = 0.0
cache/0/39/0/underline_position = 0.0
cache/0/39/0/underline_thickness = 0.0
cache/0/39/0/scale = 1.0
cache/0/40/0/ascent = 0.0
cache/0/40/0/descent = 0.0
cache/0/40/0/underline_position = 0.0
cache/0/40/0/underline_thickness = 0.0
cache/0/40/0/scale = 1.0
cache/0/41/0/ascent = 0.0
cache/0/41/0/descent = 0.0
cache/0/41/0/underline_position = 0.0
cache/0/41/0/underline_thickness = 0.0
cache/0/41/0/scale = 1.0
cache/0/42/0/ascent = 0.0
cache/0/42/0/descent = 0.0
cache/0/42/0/underline_position = 0.0
cache/0/42/0/underline_thickness = 0.0
cache/0/42/0/scale = 1.0
cache/0/43/0/ascent = 0.0
cache/0/43/0/descent = 0.0
cache/0/43/0/underline_position = 0.0
cache/0/43/0/underline_thickness = 0.0
cache/0/43/0/scale = 1.0
cache/0/44/0/ascent = 0.0
cache/0/44/0/descent = 0.0
cache/0/44/0/underline_position = 0.0
cache/0/44/0/underline_thickness = 0.0
cache/0/44/0/scale = 1.0
cache/0/45/0/ascent = 0.0
cache/0/45/0/descent = 0.0
cache/0/45/0/underline_position = 0.0
cache/0/45/0/underline_thickness = 0.0
cache/0/45/0/scale = 1.0
cache/0/46/0/ascent = 0.0
cache/0/46/0/descent = 0.0
cache/0/46/0/underline_position = 0.0
cache/0/46/0/underline_thickness = 0.0
cache/0/46/0/scale = 1.0
cache/0/47/0/ascent = 0.0
cache/0/47/0/descent = 0.0
cache/0/47/0/underline_position = 0.0
cache/0/47/0/underline_thickness = 0.0
cache/0/47/0/scale = 1.0
cache/0/48/0/ascent = 0.0
cache/0/48/0/descent = 0.0
cache/0/48/0/underline_position = 0.0
cache/0/48/0/underline_thickness = 0.0
cache/0/48/0/scale = 1.0
cache/0/49/0/ascent = 0.0
cache/0/49/0/descent = 0.0
cache/0/49/0/underline_position = 0.0
cache/0/49/0/underline_thickness = 0.0
cache/0/49/0/scale = 1.0
cache/0/50/0/ascent = 0.0
cache/0/50/0/descent = 0.0
cache/0/50/0/underline_position = 0.0
cache/0/50/0/underline_thickness = 0.0
cache/0/50/0/scale = 1.0
cache/0/51/0/ascent = 0.0
cache/0/51/0/descent = 0.0
cache/0/51/0/underline_position = 0.0
cache/0/51/0/underline_thickness = 0.0
cache/0/51/0/scale = 1.0
cache/0/52/0/ascent = 0.0
cache/0/52/0/descent = 0.0
cache/0/52/0/underline_position = 0.0
cache/0/52/0/underline_thickness = 0.0
cache/0/52/0/scale = 1.0
cache/0/53/0/ascent = 0.0
cache/0/53/0/descent = 0.0
cache/0/53/0/underline_position = 0.0
cache/0/53/0/underline_thickness = 0.0
cache/0/53/0/scale = 1.0
cache/0/54/0/ascent = 0.0
cache/0/54/0/descent = 0.0
cache/0/54/0/underline_position = 0.0
cache/0/54/0/underline_thickness = 0.0
cache/0/54/0/scale = 1.0
cache/0/55/0/ascent = 0.0
cache/0/55/0/descent = 0.0
cache/0/55/0/underline_position = 0.0
cache/0/55/0/underline_thickness = 0.0
cache/0/55/0/scale = 1.0
cache/0/56/0/ascent = 0.0
cache/0/56/0/descent = 0.0
cache/0/56/0/underline_position = 0.0
cache/0/56/0/underline_thickness = 0.0
cache/0/56/0/scale = 1.0
cache/0/57/0/ascent = 0.0
cache/0/57/0/descent = 0.0
cache/0/57/0/underline_position = 0.0
cache/0/57/0/underline_thickness = 0.0
cache/0/57/0/scale = 1.0
cache/0/58/0/ascent = 0.0
cache/0/58/0/descent = 0.0
cache/0/58/0/underline_position = 0.0
cache/0/58/0/underline_thickness = 0.0
cache/0/58/0/scale = 1.0
cache/0/59/0/ascent = 0.0
cache/0/59/0/descent = 0.0
cache/0/59/0/underline_position = 0.0
cache/0/59/0/underline_thickness = 0.0
cache/0/59/0/scale = 1.0
cache/0/60/0/ascent = 0.0
cache/0/60/0/descent = 0.0
cache/0/60/0/underline_position = 0.0
cache/0/60/0/underline_thickness = 0.0
cache/0/60/0/scale = 1.0
cache/0/61/0/ascent = 0.0
cache/0/61/0/descent = 0.0
cache/0/61/0/underline_position = 0.0
cache/0/61/0/underline_thickness = 0.0
cache/0/61/0/scale = 1.0
cache/0/62/0/ascent = 0.0
cache/0/62/0/descent = 0.0
cache/0/62/0/underline_position = 0.0
cache/0/62/0/underline_thickness = 0.0
cache/0/62/0/scale = 1.0
cache/0/63/0/ascent = 0.0
cache/0/63/0/descent = 0.0
cache/0/63/0/underline_position = 0.0
cache/0/63/0/underline_thickness = 0.0
cache/0/63/0/scale = 1.0
cache/0/64/0/ascent = 0.0
cache/0/64/0/descent = 0.0
cache/0/64/0/underline_position = 0.0
cache/0/64/0/underline_thickness = 0.0
cache/0/64/0/scale = 1.0
cache/0/65/0/ascent = 0.0
cache/0/65/0/descent = 0.0
cache/0/65/0/underline_position = 0.0
cache/0/65/0/underline_thickness = 0.0
cache/0/65/0/scale = 1.0
cache/0/66/0/ascent = 0.0
cache/0/66/0/descent = 0.0
cache/0/66/0/underline_position = 0.0
cache/0/66/0/underline_thickness = 0.0
cache/0/66/0/scale = 1.0
cache/0/67/0/ascent = 0.0
cache/0/67/0/descent = 0.0
cache/0/67/0/underline_position = 0.0
cache/0/67/0/underline_thickness = 0.0
cache/0/67/0/scale = 1.0
cache/0/68/0/ascent = 0.0
cache/0/68/0/descent = 0.0
cache/0/68/0/underline_position = 0.0
cache/0/68/0/underline_thickness = 0.0
cache/0/68/0/scale = 1.0
cache/0/69/0/ascent = 0.0
cache/0/69/0/descent = 0.0
cache/0/69/0/underline_position = 0.0
cache/0/69/0/underline_thickness = 0.0
cache/0/69/0/scale = 1.0
cache/0/70/0/ascent = 0.0
cache/0/70/0/descent = 0.0
cache/0/70/0/underline_position = 0.0
cache/0/70/0/underline_thickness = 0.0
cache/0/70/0/scale = 1.0
cache/0/71/0/ascent = 0.0
cache/0/71/0/descent = 0.0
cache/0/71/0/underline_position = 0.0
cache/0/71/0/underline_thickness = 0.0
cache/0/71/0/scale = 1.0
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/73/0/ascent = 0.0
cache/0/73/0/descent = 0.0
cache/0/73/0/underline_position = 0.0
cache/0/73/0/underline_thickness = 0.0
cache/0/73/0/scale = 1.0
cache/0/74/0/ascent = 0.0
cache/0/74/0/descent = 0.0
cache/0/74/0/underline_position = 0.0
cache/0/74/0/underline_thickness = 0.0
cache/0/74/0/scale = 1.0
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/76/0/ascent = 0.0
cache/0/76/0/descent = 0.0
cache/0/76/0/underline_position = 0.0
cache/0/76/0/underline_thickness = 0.0
cache/0/76/0/scale = 1.0
cache/0/77/0/ascent = 0.0
cache/0/77/0/descent = 0.0
cache/0/77/0/underline_position = 0.0
cache/0/77/0/underline_thickness = 0.0
cache/0/77/0/scale = 1.0
cache/0/78/0/ascent = 0.0
cache/0/78/0/descent = 0.0
cache/0/78/0/underline_position = 0.0
cache/0/78/0/underline_thickness = 0.0
cache/0/78/0/scale = 1.0
cache/0/79/0/ascent = 0.0
cache/0/79/0/descent = 0.0
cache/0/79/0/underline_position = 0.0
cache/0/79/0/underline_thickness = 0.0
cache/0/79/0/scale = 1.0
cache/0/80/0/ascent = 0.0
cache/0/80/0/descent = 0.0
cache/0/80/0/underline_position = 0.0
cache/0/80/0/underline_thickness = 0.0
cache/0/80/0/scale = 1.0
cache/0/81/0/ascent = 0.0
cache/0/81/0/descent = 0.0
cache/0/81/0/underline_position = 0.0
cache/0/81/0/underline_thickness = 0.0
cache/0/81/0/scale = 1.0
cache/0/82/0/ascent = 0.0
cache/0/82/0/descent = 0.0
cache/0/82/0/underline_position = 0.0
cache/0/82/0/underline_thickness = 0.0
cache/0/82/0/scale = 1.0
cache/0/83/0/ascent = 0.0
cache/0/83/0/descent = 0.0
cache/0/83/0/underline_position = 0.0
cache/0/83/0/underline_thickness = 0.0
cache/0/83/0/scale = 1.0
cache/0/84/0/ascent = 0.0
cache/0/84/0/descent = 0.0
cache/0/84/0/underline_position = 0.0
cache/0/84/0/underline_thickness = 0.0
cache/0/84/0/scale = 1.0
cache/0/85/0/ascent = 0.0
cache/0/85/0/descent = 0.0
cache/0/85/0/underline_position = 0.0
cache/0/85/0/underline_thickness = 0.0
cache/0/85/0/scale = 1.0
cache/0/86/0/ascent = 0.0
cache/0/86/0/descent = 0.0
cache/0/86/0/underline_position = 0.0
cache/0/86/0/underline_thickness = 0.0
cache/0/86/0/scale = 1.0
cache/0/87/0/ascent = 0.0
cache/0/87/0/descent = 0.0
cache/0/87/0/underline_position = 0.0
cache/0/87/0/underline_thickness = 0.0
cache/0/87/0/scale = 1.0
cache/0/88/0/ascent = 0.0
cache/0/88/0/descent = 0.0
cache/0/88/0/underline_position = 0.0
cache/0/88/0/underline_thickness = 0.0
cache/0/88/0/scale = 1.0
cache/0/89/0/ascent = 0.0
cache/0/89/0/descent = 0.0
cache/0/89/0/underline_position = 0.0
cache/0/89/0/underline_thickness = 0.0
cache/0/89/0/scale = 1.0
cache/0/90/0/ascent = 0.0
cache/0/90/0/descent = 0.0
cache/0/90/0/underline_position = 0.0
cache/0/90/0/underline_thickness = 0.0
cache/0/90/0/scale = 1.0
cache/0/91/0/ascent = 0.0
cache/0/91/0/descent = 0.0
cache/0/91/0/underline_position = 0.0
cache/0/91/0/underline_thickness = 0.0
cache/0/91/0/scale = 1.0
cache/0/92/0/ascent = 0.0
cache/0/92/0/descent = 0.0
cache/0/92/0/underline_position = 0.0
cache/0/92/0/underline_thickness = 0.0
cache/0/92/0/scale = 1.0
cache/0/93/0/ascent = 0.0
cache/0/93/0/descent = 0.0
cache/0/93/0/underline_position = 0.0
cache/0/93/0/underline_thickness = 0.0
cache/0/93/0/scale = 1.0
cache/0/94/0/ascent = 0.0
cache/0/94/0/descent = 0.0
cache/0/94/0/underline_position = 0.0
cache/0/94/0/underline_thickness = 0.0
cache/0/94/0/scale = 1.0
cache/0/95/0/ascent = 0.0
cache/0/95/0/descent = 0.0
cache/0/95/0/underline_position = 0.0
cache/0/95/0/underline_thickness = 0.0
cache/0/95/0/scale = 1.0
cache/0/96/0/ascent = 0.0
cache/0/96/0/descent = 0.0
cache/0/96/0/underline_position = 0.0
cache/0/96/0/underline_thickness = 0.0
cache/0/96/0/scale = 1.0

[sub_resource type="FontVariation" id="FontVariation_h2yge"]
base_font = SubResource("FontFile_0xm2m")

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig7tw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="TimeLabel" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(400, 150)
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_h2yge")
theme_override_font_sizes/font_size = 96
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartStopButton" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 48
text = "S T A R T"

[node name="MessageLabel" type="Label" parent="VBoxContainer"]
visible = false
modulate = Color(1.8049031e-06, 0.6761282, 0.1449298, 1)
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "MessageLabel"
horizontal_alignment = 1
